--- a/_data/xp.yml
+++ b/_data/xp.yml
@@ -38,7 +38,7 @@ pinuts:
   href: http://www.pinutsstudios.com.br
   job_title: Desenvolvedor
   period: 15/10/2011 a 15/12/2013
-  description: Desenvolvimento de aplicativos móveis com HTML5 e JS, desenvolvimento de aplicações web e APIs.
+  description: Desenvolvimento de aplicações para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
   keywords:
     - Git
     - Ruby
