--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,13 @@
-name: Blog
+name: Felipe Vieira
+email: nvieirafelipe@gmail.com
+
+# Build settings
+exclude: [ 'Gemfile*', 'README.md', 'bower.json' ]
 highlighter: rouge
 markdown: kramdown
 sass:
-    style: :compressed
-    sass_dir: assets/stylesheets
+  style: :compressed
+  sass_dir: assets/stylesheets
 
 gem:
   - jekyll-babel
-
-# Build settings
-exclude: [
-  'Gemfile*',
-  'README.md',
-  'bower.json',
-  'assets/stylesheets/mixins',
-  'about/*',
-  'index/*'
-]
