--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Felipe Vieira
 email: nvieirafelipe@gmail.com
 
 # Build settings
-exclude: [ 'Gemfile*', 'README.md', 'bower.json' ]
+exclude: [ 'bower.json', 'Gemfile*', 'README.md', 'vendor' ]
 sass:
   style: :compressed
   sass_dir: assets/stylesheets
