Use webpack to build assets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,12 @@ services:
       - .:/opt/nvieirafelipe
     stdin_open: true
     tty: true
+
+  webpack:
+    container_name: 'nvieirafelipe_webpack'
+    build: .
+    command: npm run-script serve
+    volumes:
+      - .:/opt/nvieirafelipe
+    depends_on:
+      - web
